--- a/template_51688/Free_HTML5_Web_Design_Theme/site/css/stuck.css
+++ b/template_51688/Free_HTML5_Web_Design_Theme/site/css/stuck.css
@@ -5,7 +5,8 @@
 		-o-transition: all 0.4s ease;
 		transition: all 0.4s ease;
 		z-index: 999;
-		background-color: #fff;
+		/*background-color: #fff;*/
+		background-color:transparent;
 		padding: 10px 0 33px;
 }
 
