--- a/template_51688/Free_HTML5_Web_Design_Theme/site/css/superfish.css
+++ b/template_51688/Free_HTML5_Web_Design_Theme/site/css/superfish.css
@@ -2,8 +2,8 @@
 .navigation  {
 	z-index: 999;
 	position: relative;
-	float: right;
-	padding-top: 29px;
+	/*float: right;
+	padding-top: 29px;*/
 	
 }
 
@@ -20,7 +20,7 @@
 nav {
 	 position:relative;
 	 padding: 0;
-	 font-family: 'Pathway Gothic One', sans-serif;
+	 /*font-family: 'Pathway Gothic One', sans-serif;*/
 }
 
 .sf-menu ul {
@@ -51,7 +51,7 @@ nav {
 
 .sf-menu>li>a{
 	position: relative;
-	color: #5e5c5c; 
+	/*color: #5e5c5c; */
 	font-weight: 300;
 	display: block;
 	text-align: center;
