--- a/template_51688/Free_HTML5_Web_Design_Theme/site/css/stuck.css
+++ b/template_51688/Free_HTML5_Web_Design_Theme/site/css/stuck.css
@@ -6,7 +6,7 @@
 		transition: all 0.4s ease;
 		z-index: 999;
 		/*background-color: #fff;*/
-		background-color:transparent;
+		background-color:#5e5c5c;
 		padding: 10px 0 33px;
 }
 
