--- a/template_51688/Free_HTML5_Web_Design_Theme/site/css/style.css
+++ b/template_51688/Free_HTML5_Web_Design_Theme/site/css/style.css
@@ -2,8 +2,8 @@
 @import "font-awesome.css";
 @import "superfish.css";
 
-@import url(//fonts.googleapis.com/css?family=BenchNine);
-@import url(//fonts.googleapis.com/css?family=Pathway+Gothic+One);
+/*@import url(//fonts.googleapis.com/css?family=BenchNine);
+@import url(//fonts.googleapis.com/css?family=Pathway+Gothic+One);*/
 @import url(//fonts.googleapis.com/css?family=Open+Sans:400);
 @import url(//fonts.googleapis.com/css?family=Open+Sans:300);
 html {
@@ -21,22 +21,12 @@ a[href^="tel:"] {
 body {
     position: relative;
     background-color: #fff;
-    color: #615f5f;
+    /*color: #615f5f;*/
+	color: #333;
     font: 300 14px/20px 'Open Sans', sans-serif;
 }
 
-.ic {
-	border:0;
-	float:right;
-	background:#fff;
-	color:#f00;
-	width:50%;
-	line-height:10px;
-	font-size:10px;
-	margin:-220% 0 0 0;
-	overflow:hidden;
-	padding:0
-}
+
 
 strong {
     font-weight: 700;
@@ -65,7 +55,7 @@ img {
 /****Heads****/
 
 
-h1, h2, h3, h4, h5, h6 {
+/*h1, h2, h3, h4, h5, h6 {
     font-weight: normal;
     color: #383636;
     font-family: 'BenchNine', sans-serif;
@@ -94,7 +84,34 @@ h3 {
 .page1 h3.head1 {
     padding-top: 40px;
     margin-bottom: 29px;
+}*/
+
+/**** Skeleton ****/
+
+h1, h2, h3, h4, h5, h6 {
+  margin-top: 0;
+  margin-bottom: .7rem;
+  font-weight: 300; }
+h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
+h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
+h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
+h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
+h5 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: -.05rem; }
+h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
+
+/* Larger than phablet */
+@media (min-width: 550px) {
+  h1 { font-size: 2.0rem; }
+  h2 { font-size: 1.5rem; }
+  h3 { font-size: 3.6rem; }
+  h4 { font-size: 3.0rem; }
+  h5 { font-size: 2.4rem; }
+  h6 { font-size: 1.5rem; }
 }
+
+/**** /Skeleton ****/
+
+
 
 /****Lists****/
 
@@ -332,7 +349,8 @@ header h1 a img {
 /****Content****/
 
 .content {
-    padding-bottom: 77px;
+    /*padding-bottom: 77px;*/
+	padding-bottom:2rem;
 }
 
 .page1 .content {
